<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7dp"
    android:padding="0dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="right">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_sum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView_num"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|end"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="100dp"
                android:textStyle="bold" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <Button
            android:id="@+id/button_7"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-5dp"
            android:layout_weight="1"
            android:minWidth="100dp"
            android:onClick="onClick"
            android:padding="0dp"
            android:text="@string/seven"
            android:textSize="20sp"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/button_8"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-5dp"
            android:layout_weight="1"
            android:minWidth="100dp"
            android:onClick="onClick"
            android:padding="0dp"
            android:text="@string/eight"
            android:textSize="20sp"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/button_9"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-5dp"
            android:layout_weight="1"
            android:minWidth="100dp"
            android:onClick="onClick"
            android:padding="0dp"
            android:text="@string/nine"
            android:textSize="20sp"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/button_division"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-5dp"
            android:layout_weight="1"
            android:minWidth="100dp"
            android:onClick="onClick"
            android:padding="0dp"
            android:text="@string/division"
            android:textSize="20sp"
            app:backgroundTint="@color/cardview_dark_background" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <Button
            android:id="@+id/button_4"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-5dp"
            android:layout_weight="1"
            android:minWidth="100dp"
            android:onClick="onClick"
            android:padding="0dp"
            android:text="@string/four"
            android:textSize="20sp"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/button_5"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-5dp"
            android:layout_weight="1"
            android:minWidth="100dp"
            android:onClick="onClick"
            android:padding="0dp"
            android:text="@string/five"
            android:textSize="20sp"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/button_6"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-5dp"
            android:layout_weight="1"
            android:minWidth="100dp"
            android:onClick="onClick"
            android:padding="0dp"
            android:text="@string/six"
            android:textSize="20sp"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/button_multiply"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-5dp"
            android:layout_weight="1"
            android:minWidth="100dp"
            android:onClick="onClick"
            android:padding="0dp"
            android:text="@string/multiply"
            android:textSize="20sp"
            app:backgroundTint="@color/cardview_dark_background" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <Button
            android:id="@+id/button_1"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-5dp"
            android:layout_weight="1"
            android:minWidth="100dp"
            android:onClick="onClick"
            android:padding="0dp"
            android:text="@string/one"
            android:textSize="20sp"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/button_2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-5dp"
            android:layout_weight="1"
            android:minWidth="100dp"
            android:onClick="onClick"
            android:padding="0dp"
            android:text="@string/two"
            android:textSize="20sp"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/button_3"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-5dp"
            android:layout_weight="1"
            android:minWidth="100dp"
            android:onClick="onClick"
            android:padding="0dp"
            android:text="@string/three"
            android:textSize="20sp"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/button_plus"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-5dp"
            android:layout_weight="1"
            android:minWidth="100dp"
            android:onClick="onClick"
            android:padding="0dp"
            android:text="@string/Plus"
            android:textSize="20sp"
            app:backgroundTint="@color/cardview_dark_background" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <Button
            android:id="@+id/button_delete"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-5dp"
            android:layout_weight="1"
            android:minWidth="100dp"
            android:onClick="onClick"
            android:padding="0dp"
            android:text="@string/delete"
            android:textSize="20sp"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/button_0"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-5dp"
            android:layout_weight="1"
            android:minWidth="100dp"
            android:onClick="onClick"
            android:padding="0dp"
            android:text="@string/zero"
            android:textSize="20sp"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/button_equal"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-5dp"
            android:layout_weight="1"
            android:minWidth="100dp"
            android:onClick="onClick"
            android:padding="0dp"
            android:text="@string/equal"
            android:textSize="20sp"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/button_subtract"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-5dp"
            android:layout_weight="1"
            android:minWidth="100dp"
            android:onClick="onClick"
            android:padding="0dp"
            android:text="@string/subtract"
            android:textSize="20sp"
            app:backgroundTint="@color/cardview_dark_background" />
    </TableRow>
</TableLayout>